examples/test/testpolicy4826.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy4826
  namespace: namespace282
spec:
  podSelector:
    matchLabels:
      key32: value7
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key29: value40
      podSelector:
        matchLabels:
          key43: value6
          key29: value32
          key31: value24
